kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: oierarribas/api-mangaweb
        ports:
        - containerPort: 8000
        command: ["sh", "-c", "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/pg_data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: oierarribas/front-mangaweb
        ports:
        - containerPort: 80
