kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:

      - path: /secproductos/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /db/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: db
            port:
              number: 5432
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 80
